--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,10 @@
-homepage: "https://www.linkedin.com/company/rm-digitalanalytics/"
+homepage: "https://www.example.com"
+documentation: "https://www.example.com/documentation"
 versions:
   - sha: 140c2b4c8f8746f41c59474d4dae67a5e99bbd88
+    changeNotes: Second release.
+
+homepage: "https://www.linkedin.com/company/rm-digitalanalytics/"
+versions:
+  - sha: a1574f5eee031c89b850bff7866b38d7316d4f9d
     changeNotes: Initial Version
