--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,4 @@
-homepage: "https://www.example.com"
-documentation: "https://www.example.com/documentation"
+homepage: "https://www.linkedin.com/company/rm-digitalanalytics/"
 versions:
   - sha: ade39d7932ce9bf1992020c84e21f551849b4118
     changeNotes: Second release.
